src/yini_test/cases/golden/strict/valid/numbers/integers.strict.yini
@yini strict

^ Numbers
zero = 0
one = 1
large = 123456789

/END
