src/yini_test/cases/golden/strict/invalid/numbers/malformed-underscore.strict.yini
@yini strict

^ Numbers
value = 1__000

/END
